--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div id="slide_02" class="slide_item" style="background-image: url('image/slide03.png');"></div> 
                     <div id="slide_03" class="slide_item" style="background-image: url('image/slide04.jpg');"></div> 
                 </div>
-              
+              <div id="slider_footer"></div>
             </div>
 
             
